# algo_projekti

./: .gitignore  README.md  coverage_report.txt  pylint_report.txt  pyproject.toml
documents/: maarittely.md  testaus.md  toteutus.md  viikkoraportti1.md  viikkoraportti2.md  viikkoraportti3.md  viikkoraportti4.md  viikkoraportti5.md  viikkoraportti6.md
src/: ai.py  board.py  heuristic.py  main.py  tic_tac_toe.py
tests/: test_ai.py  test_board.py  test_gameplay.py  test_heuristic.py  test_tictactoe.py
