[tool.poetry]
name = "tira-projekti"
version = "0.1.0"
description = ""
authors = ["lsommarberg <laura.sommarberg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
pylint = "^3.0.3"
coverage = "^7.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "src"


[tool.pylint]
disable = ["C0114", "C0115", "C0116", "C0200", "W0246", "R0914", "R0913", "C0415"]